* Added publish task

--- a/README
+++ b/README
@@ -81,6 +81,11 @@ nothing will be saved.
 
 NullDB was written by Avdi Grimm <mailto:avdi@avdi.org>
 
+== Where
+
+* Homepage: http://avdi.org/projects/nulldb/
+* Public SVN: http://svn.avdi.org/nulldb/
+
 == License
 
 See the LICENSE file for licensing information.
