--- a/README
+++ b/README
@@ -86,6 +86,11 @@ NullDB was written by Avdi Grimm <mailto:avdi@avdi.org>
 * Homepage: http://avdi.org/projects/nulldb/
 * Public SVN: http://svn.avdi.org/nulldb/
 
+== Changes
+
+ * Version 0.0.1 (2007-02-18)
+   - Initial Release
+
 == License
 
 See the LICENSE file for licensing information.
