--- a/README.rdoc
+++ b/README.rdoc
@@ -8,6 +8,10 @@ interactions into no-ops.  Using NullDB enables you to test your model
 business logic - including +after_save+ hooks - without ever touching
 a real database.
 
+== Installation
+
+  gem install activerecord-nulldb-adapter
+
 == How 
 
 Once installed, NullDB can be used much like any other ActiveRecord
@@ -124,7 +128,7 @@ nothing will be saved.
 == Version Compatibility
 
 The specs pass against ruby {1.8.6}[http://integrity186.heroku.com/null-db], {1.8.7}[http://integrity187.heroku.com/null-db]
-and {1.9.1}[http://integrity191.heroku.com/null-db], using ActiveRecord 2.0.0 to 2.3.5.
+and {1.9.1}[http://integrity191.heroku.com/null-db], using any version of ActiveRecord since 2.0.0, including ActiveRecord 3.0.0.beta.
 
 == Who 
 
@@ -133,9 +137,7 @@ It is currently maintained by {Myron Marston}[http://github.com/myronmarston].
 
 == Where
 
-* Homepage: http://nulldb.rubyforge.org
-* Project Info: http://rubyforge.org/projects/nulldb/
-* SCM: http://rubyforge.org/scm/?group_id=7512
+* Homepage: http://github.com/nulldb/nulldb
 
 == Changes
 
@@ -144,7 +146,11 @@ It is currently maintained by {Myron Marston}[http://github.com/myronmarston].
  * Version 0.0.2 (2007-05-31)
    - Moved to Rubyforge
  * Version 0.1.0 (2010-03-02)
-   - Released as a gem, with some bug fixes.
+   - Released as nulldb gem, with some bug fixes.
+ * Version 0.1.1 (2010-03-15)
+   - Released as activerecord-nulldb-adapter gem.
+ * Version 0.2.0 (2010-03-20)
+   - Rails 3 support.  All specs pass against ActiveRecord 3.0.0.beta.
 
 == License
 
