--- a/README.rdoc
+++ b/README.rdoc
@@ -90,7 +90,7 @@ touch the database.  The biggest is probably speed of execution - unit
 tests must be fast for test-driven development to be practical.
 Another is separation of concerns: unit tests should be exercising
 only the business logic contained in your models, not ActiveRecord.
-For more on why testing-sans-database is a god idea, see:
+For more on why testing-sans-database is a good idea, see:
 http://www.dcmanges.com/blog/rails-unit-record-test-without-the-database.
 
 NullDB is one way to separate your unit tests from the database.  It
