--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,9 @@
+
+{<img src="https://badge.fury.io/rb/activerecord-nulldb-adapter.png" alt="Gem Version" />}[http://badge.fury.io/rb/activerecord-nulldb-adapter]
+{<img src="https://codeclimate.com/github/nulldb/nulldb.png" />}[https://codeclimate.com/github/nulldb/nulldb]
+{<img src="https://travis-ci.org/nulldb/nulldb.png?branch=master" alt="Build Status" />}[https://travis-ci.org/nulldb/nulldb]
+
+
 = The NullDB Connection Adapter Plugin
 
 == What
@@ -12,7 +18,7 @@ a real database.
 
   gem install activerecord-nulldb-adapter
 
-== How 
+== How
 
 Once installed, NullDB can be used much like any other ActiveRecord
 database adapter:
@@ -83,7 +89,7 @@ into its standard Rake tasks, you may find that this generates
 unexpected and difficult-to-debug behavior.  Workarounds for this are
 under development.
 
-== Why 
+== Why
 
 There are a number of advantages to writing unit tests that never
 touch the database.  The biggest is probably speed of execution - unit
@@ -121,7 +127,7 @@ nothing will be saved.
 The specs pass against ruby {1.8.6}[http://integrity186.heroku.com/null-db], {1.8.7}[http://integrity187.heroku.com/null-db]
 and {1.9.1}[http://integrity191.heroku.com/null-db], using any version of ActiveRecord since 2.0.0, including ActiveRecord 3.0.0.
 
-== Who 
+== Who
 
 NullDB was originally written by Avdi Grimm <mailto:avdi@avdi.org>.
 It is currently maintained by {Myron Marston}[http://github.com/myronmarston].
@@ -129,22 +135,6 @@ It is currently maintained by {Myron Marston}[http://github.com/myronmarston].
 == Where
 
 * Homepage: http://github.com/nulldb/nulldb
-
-== Changes
-
- * Version 0.0.1 (2007-02-18)
-   - Initial Release
- * Version 0.0.2 (2007-05-31)
-   - Moved to Rubyforge
- * Version 0.1.0 (2010-03-02)
-   - Released as nulldb gem, with some bug fixes.
- * Version 0.1.1 (2010-03-15)
-   - Released as activerecord-nulldb-adapter gem.
- * Version 0.2.0 (2010-03-20)
-   - Rails 3 support.  All specs pass against ActiveRecord 3.0.0.beta.
- * Version 0.2.1 (2010-09-01)
-   - Updated Rails 3 support so that nulldb works against AR 3.0.0.
-   - Add support for RSpec 2.
 
 == License
 
