--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,18 @@ interactions into no-ops.  Using NullDB enables you to test your model
 business logic - including +after_save+ hooks - without ever touching
 a real database.
 
+== Compatibility
+
+=== Ruby
+Currently supported Ruby versions: MRI 1.9.3, 2.0.0, 2.1.0
+
+Experimental support provided for: JRuby, Rubinius (both in 1.9 mode)
+
+=== ActiveRecord
+Any version of ActiveRecord since 2.0, including ActiveRecord 4.0
+
+It is tested against AR 2.3, 3.0, 3.1, 3.2 and 4.0.
+
 == Installation
 
   gem install activerecord-nulldb-adapter
@@ -121,11 +133,6 @@ nothing will be saved.
 * It has only the most rudimentery schema/migration support.  Complex
   migrations will probably break it.
 * Lots of other things probably don't work.  Patches welcome!
-
-== Version Compatibility
-
-The specs pass against ruby {1.8.6}[http://integrity186.heroku.com/null-db], {1.8.7}[http://integrity187.heroku.com/null-db]
-and {1.9.1}[http://integrity191.heroku.com/null-db], using any version of ActiveRecord since 2.0.0, including ActiveRecord 3.0.0.
 
 == Who
 
