--- a/README.rdoc
+++ b/README.rdoc
@@ -16,14 +16,14 @@ a real database.
 == Compatibility
 
 === Ruby
-Currently supported Ruby versions: MRI 2.0.0, 2.1.x, 2.2.x, 2.3.x
+Currently supported Ruby versions: MRI 1.9.3, 2.0.0, 2.1.x, 2.2.x, 2.3.x
 
 Experimental support provided for: JRuby, Rubinius (both in 1.9 mode)
 
 === ActiveRecord
-Any version of ActiveRecord since 2.0, including ActiveRecord 4.0
+Any version of ActiveRecord since 2.0, including ActiveRecord 5.0
 
-It is tested against AR 2.3, 3.0, 3.1, 3.2, 4.0 and 4.1.
+It is tested against AR 2.3, 3.0, 3.1, 3.2, 4.0, 4.1, 4.2 and 5.0.
 
 == Installation
 
